force-app/main/default/objects/School_Budget__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <defaultValue>&quot;YYYY/YY&quot;</defaultValue>
        <label>Academic Year</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gross_Income__c</fullName>
        <label>Gross Income</label>
        <summarizedField>Budget_Income__c.Total_Income_Text__c</summarizedField>
        <summaryFilterItems>
            <field>Budget_Income__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Additional Programmes, Application Fees, Bus Service, Capital Contributions/Deposits, EAL Fees, Lunch Fees, Other Fees, Tuition Fees</value>
        </summaryFilterItems>
        <summaryForeignKey>Budget_Income__c.School_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Gross_Profit__c</fullName>
        <formula>Net_Revenue__c - Total_Salary_Costs__c - Total_Premises__c -  Total_Academic_Costs__c -  Total_Administrative_Costs__c - Total_School_Services_Costs__c - Total_Other_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <label>Locked</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Months_in_a_Year__c</fullName>
        <label>Months in a Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Profit__c</fullName>
        <formula>Gross_Profit__c - Total_Profit_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Revenue__c</fullName>
        <label>Net Revenue</label>
        <summarizedField>Budget_Income__c.Total_Income_Text__c</summarizedField>
        <summaryForeignKey>Budget_Income__c.School_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Students__c</fullName>
        <label>Number of Students</label>
        <summarizedField>Budget_Income__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Budget_Income__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Tuition Fees</value>
        </summaryFilterItems>
        <summaryForeignKey>Budget_Income__c.School_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pay_Monthly__c</fullName>
        <label>% Pay Monthly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pay_Termly__c</fullName>
        <label>% Pay Termly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pay_Yearly__c</fullName>
        <label>% Pay Yearly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Premises_Ratio__c</fullName>
        <formula>Total_Premises__c / Gross_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premises Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Profit_Tax__c</fullName>
        <label>% Profit Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Approval Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Academic_Costs__c</fullName>
        <label>Total Academic Costs</label>
        <summarizedField>Budget_Academic_Costs__c.Cost_for_School__c</summarizedField>
        <summaryForeignKey>Budget_Academic_Costs__c.School_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Administrative_Costs__c</fullName>
        <label>Total Administrative Costs</label>
        <summarizedField>Budget_Admin_Costs__c.Cost_for_School__c</summarizedField>
        <summaryForeignKey>Budget_Admin_Costs__c.School_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Other_Costs__c</fullName>
        <label>Total Other Costs</label>
        <summarizedField>Budget_Other_Costs__c.Cost_for_School__c</summarizedField>
        <summaryForeignKey>Budget_Other_Costs__c.School_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Premises__c</fullName>
        <label>Total Premises</label>
        <summarizedField>Budget_Premises__c.Cost_for_School__c</summarizedField>
        <summaryForeignKey>Budget_Premises__c.School_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Profit_Tax__c</fullName>
        <formula>Profit_Tax__c * Gross_Profit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Profit Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Salary_Costs__c</fullName>
        <label>Total Salary Costs</label>
        <summarizedField>Budget_Salaries__c.Total_Cost_for_School__c</summarizedField>
        <summaryForeignKey>Budget_Salaries__c.School_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_School_Services_Costs__c</fullName>
        <label>Total School Services Costs</label>
        <summarizedField>Budget_School_Services_Costs__c.Cost_for_School_Tex__c</summarizedField>
        <summaryForeignKey>Budget_School_Services_Costs__c.School_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tuition_Revenues__c</fullName>
        <label>Tuition Revenues</label>
        <summarizedField>Budget_Income__c.Total_Income_Text__c</summarizedField>
        <summaryFilterItems>
            <field>Budget_Income__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Tuition Fees</value>
        </summaryFilterItems>
        <summaryForeignKey>Budget_Income__c.School_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>School Budget</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SB-{0000}</displayFormat>
        <label>School Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>School Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>